project(
    'vic-dbus',
    'cpp'
    # default_options: [
    #     'warning_level=3',
    #     'werror=true',
    #     'cpp_std=c++20'
    # ]
)

# sdbusplus_dep = dependency('sdbusplus')

source = [
    'main.cpp'
]


executable(
    'vic-dbus',
    source,
    # dependencies:sdbusplus_dep,
    install : true
)